# tinyhttp

./: Cargo.toml  README.md
examples/: test.rs
src/: config.rs  error.rs  headers.rs  lib.rs  logging.rs  parser.rs  reader.rs  request.rs  routing.rs  status.rs  utils.rs  writer.rs
static/: 401.html  500.html
